RESOLVED FIXED201120
ContextMenu on a link in an email no longer shows web preview
https://bugs.webkit.org/show_bug.cgi?id=201120
Summary ContextMenu on a link in an email no longer shows web preview
Dean Jackson
Reported 2019-08-24 16:55:30 PDT
ContextMenu on a link in an email no longer shows web preview
Attachments
Patch (5.94 KB, patch)
2019-08-24 16:57 PDT, Dean Jackson
wenson_hsieh: review+
Dean Jackson
Comment 1 2019-08-24 16:56:01 PDT
Dean Jackson
Comment 2 2019-08-24 16:57:44 PDT
Dean Jackson
Comment 3 2019-09-26 15:20:08 PDT
Note You need to log in before you can comment on or make changes to this bug.